# ProjectChimera

./: .dockerignore  .env.example  .gitignore  BITGET_ISSUE_ANALYSIS.md  CLAUDE.md  CLAUDE_OPTIMIZED.md  CLEAN_STRUCTURE.md  CLEAN_STRUCTURE_SUMMARY.md  DEBUG_COMPLETE_SUMMARY.md  Dockerfile  GIT_WORKFLOW.md  LICENSE  Makefile  PRODUCTION_READY.md  README.md  check_status.py  config.dev.yaml  config.prod.yaml  data_collector.py  database.py  debug_report_20250622_050226.json  debug_system.py  demo_performance_system.py  demo_performance_tracker.py  demo_simple.py  deploy.sh  docker-compose.yml  health_server.py  launch.py  mock_ab_test_report_20250614_063713.txt  performance_simulation.py  profit_optimization_results_20250614_064910.json  pyproject.toml  requirements.txt  run_dashboard.py  run_performance_dashboard.py  simple_test_results.json  start_control_server.py  start_system.py  test_ab_model_comparison.py  (+8 more)
.claude/: common-patterns.md  context.md  debug-log.md  project-improvements.md  project-knowledge.md  settings.local.json
.claude/commands/: learnings.md
.github/workflows/: ci.yml
.streamlit/: config.toml
archive/: aggressive_scalping.py  app.py  profit_optimization_report_20250614_064910.txt  quick_start.py  requirements.txt  scalping_demo.py  scalping_engine.py  start_profit_system.sh
config/: config.yml
core/: DEPRECATED.md  __init__.py  ab_test_manager.py  advanced_risk_manager.py  ai_agent_base.py  ai_manager.py  ai_orchestrator.py  alpha_engine.py  alpha_integration.py  backtest_learning_engine.py  backtester.py  bitget_futures_client.py  bitget_rest_client.py  bitget_websocket.py  database_adapter.py  department_coordination.py  department_prompts.py  logging_config.py  model_comparator.py  news_stream.py  openai_manager.py  orderbook_analyzer.py  performance_monitor.py  portfolio.py  price_stream.py  production_inference_engine.py  profit_optimizer.py  realtime_processor.py  redis_manager.py  risk_manager.py  temporal_backtester.py  temporal_ui_helper.py  temporal_validator.py  ultra_alpha_optimizer.py
data/: aggressive_scalping_20250614_074809.json  demo_learning_results.json  master_profit_session_20250615_092434.json  mock_ab_test_results_20250614_063713.json  sample_btcusdt.csv  sample_inferences.json  scalping_session_20250614_073435.json
departments/: execution_portfolio_ai.py  fundamental_analysis_ai.py  risk_management_ai.py  sentiment_analysis_ai.py  technical_analysis_ai.py
docs/: PROFIT_MAXIMIZER_README.md
modules/: __init__.py  crypto_trader.py  feature_builder.py  scalping_features.py  signal_fusion.py  technical_analyzer.py
monitoring/: prometheus.yml
project_chimera/: __init__.py  config.py
project_chimera/cli/: backtest.py
project_chimera/core/: __init__.py  api_client.py  container.py  risk_manager.py
project_chimera/systems/: __init__.py  master_trading_system.py
project_chimera/utils/: __init__.py  logging.py  performance_tracker.py  position_manager.py  retry.py  signal_generator.py
scripts/: backup.sh  learning_cycle_runner.py  migrate_from_core.py  migrate_sqlite_to_postgres.py  scalping_data_collector.py  setup.sh
sql/: ab_test_schema.sql  init.sql
src/: fetch_exchange_rates.py  fetch_news.py  generate_hypothesis.py
src/project_chimera/: __init__.py  container.py  orchestrator.py  orchestrator_4layer.py  orchestrator_enhanced.py  orchestrator_v2.py  settings.py
src/project_chimera/ai/: __init__.py  openai_decision_engine.py  prompts.py  trading_decisions.py
src/project_chimera/analysis/: __init__.py  technical_indicators.py
src/project_chimera/api/: __init__.py  bitget_client.py  control_server.py
src/project_chimera/cli/: backtest.py  optimise.py
src/project_chimera/collectors/: __init__.py  coindesk_news_collector.py  news_rss_collector.py  x_posts_collector.py
src/project_chimera/config/: __init__.py  base.py  exchange.py  risk.py  strategy.py
src/project_chimera/core/: __init__.py
src/project_chimera/datafeed/: __init__.py  base.py  bitget_ws.py  factory.py  protocols.py
src/project_chimera/domains/: __init__.py  market.py
src/project_chimera/execution/: __init__.py  bitget.py
src/project_chimera/infra/: __init__.py  prometheus.py
src/project_chimera/monitor/: __init__.py  pdca_analyzer.py  performance_logger.py  prom_exporter.py  strategy_performance.py
src/project_chimera/risk/: __init__.py  atr_size.py  atr_target.py  dd_guard.py  drawdown.py  dyn_kelly.py  engine.py  equity_cache.py  kelly.py  unified_engine.py
src/project_chimera/services/: __init__.py
src/project_chimera/strategies/: __init__.py  base.py  basis_arb.py  cme_gap.py  (+11 more)
systems/: deploy_profit_system.py  master_profit_session_20250615_094934.json  master_profit_system.py  ultra_trading_bot.py
tests/: demo_learning_cycle.py  simple_demo.py  test_4layer_integration.py  test_ab_mock_comparison.py  test_ab_model_comparison.py  test_ai_department_integration.py  test_api_client.py  test_bitget_api.py  test_bitget_client_pytest_httpx.py  test_bitget_websocket.py  test_container.py  test_feed.py  test_fetch_news.py  test_integration.py  test_o3_integration.py  test_orchestrator_comprehensive.py  test_orchestrator_comprehensive.py.skip  test_profit_optimization.py  test_profit_optimization_mock.py  test_risk_manager.py  test_scalping_system.py  test_settings.py  test_strategies_parameterized.py  test_temporal_backtest.py
tests/datafeed/: __init__.py  test_datafeed.py  test_factory.py
tests/domains/: __init__.py  test_market_comprehensive.py
tests/execution/: __init__.py  test_bitget_comprehensive.py
tests/monitor/: __init__.py  test_prom_exporter_comprehensive.py  test_strategy_performance.py
tests/risk/: __init__.py  test_phase_d_risk_modules.py  test_phase_d_simple.py  test_risk_engine.py  test_unified_engine_comprehensive.py
tests/strategies/: __init__.py  test_strategies.py  test_weekend_effect_comprehensive.py
ui/archive/: scalping_dashboard.py
ui/ui/: profit_maximizer.py  unified_profit_dashboard.py
workers/: ai_result_processor.py  openai_worker.py  realtime_worker.py  risk_monitor.py
(+14 files in other folders)
